# blank-slate

./: README.md  debug-panel.html  debug-wasm.js  localhost-key.pem  localhost.pem  package-lock.json  package.json  resetCounter.tmp  start-debug.sh  vite.config.ts  vite.config.ts.update
debug-panel/: index.html
debug-panel/token-engine/: pkg
debug-panel/token-engine/pkg/: token_engine.d.ts  token_engine.js  token_engine_bg.wasm  token_engine_bg.wasm.d.ts
dev-dist/: sw.js  sw.js.map  workbox-c5f6b949.js  workbox-c5f6b949.js.map
public/: wasm-exports.html
public/token-engine/pkg/: package.json  token_engine.d.ts  token_engine.js  token_engine_bg.wasm  token_engine_bg.wasm.d.ts
src/: App.svelte  app.css  i18n.ts
src/lib/: BottomNav.svelte  ContentArea.svelte  ContentArea.svelte.new  ContentArea.svelte.update  DesktopNavigation.svelte  Finalize.svelte  Identity.svelte  LeftNavContainer.svelte  QRKissFinalization.svelte  S2CellLookup.svelte  TokenActions.svelte  TokenActions.svelte.backup  TokenActions.svelte.backup2  TokenActions.svelte.backup3  TokenBatchManager.svelte  TokenStash.svelte  TokenStash.svelte.backup2  TokenStash.svelte.backup3  TopNav.svelte  TopNav.svelte.update  WasmAdvancedTest.svelte  WasmBasis.svelte  WasmDemo-u32.svelte  WasmTest.svelte
src/lib/services/: IndexedDBService.ts
src/lib/styles/: juice-common.css  (+1 more)
src/locales/: en.ts  nl.ts
token-engine/: Cargo.toml  Cargo.toml.backup
token-engine/src/: lib.rs  lib.rs.backup
token-engine/src/core/: calculator.rs  counter.rs
token-engine/src/debug/: logger.rs  mod.rs  panel.rs
(+1 files in other folders)
