[package]
name = "token-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
